Bug 870951 - VacuumManager asserts when running in a child process. r=bent